--- a/public/default.css
+++ b/public/default.css
@@ -26,7 +26,7 @@
     font-weight: 100;
     letter-spacing: 0.5px;
     color: #666666;
-    font-size: 40px;
+    font-size: 2em;
     text-align: center;
 }
 
